--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,17 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>First ONE</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header></header>
+		<div class="container">
+			<div class="container__top"></div>
+			<footer class="container__bottom"></footer>
+		</div>
+		
+		
+	</body>
+</html>
+
